--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
       <h1 class="title is-size-3-tablet is-size-4-mobile has-text-centered	">
         <i class="fas fa-heartbeat"></i>
         <!-- TODO: Change to your own app name. -->
-        Kevin's Heart Health Monitor
+        Heart Health Monitor
       </h1>
 
       {% block content %}{% endblock %}
